# bedrock-code-gen

./: .gitignore  LICENSE  README.md  langgraph.ipynb  pyproject.toml
abalone/: .coveragerc  coverage.json  main.py  pytest.ini  requirements.txt  trained_model.joblib
abalone/src/: evaluate.py  inference.py  model.py  preprocess.py
abalone/tests/: conftest.py  test_evaluate.py  test_inference.py  test_model.py  test_preprocess.py
breast_cancer/: best_model.keras  breast_cancer_model.keras  coverage.json  main.py  pytest.ini  requirements.txt  trained_model.keras
breast_cancer/src/: evaluate.py  inference.py  model.py  preprocess.py
breast_cancer/tests/: conftest.py  test_evaluate.py  test_inference.py  test_model.py  test_preprocess.py
code_gen/: ai_message_parser.py  bedrock.yml  code_generator.py  code_models.py  config_manager.py  file_manager.py  graph_state.py  logger.py  model_manager.py  test_runner.py  utils.py  virtual_env_manager.py
code_gen/prompts/: abalone.yml  breast_cancer_config.yml  prompt_templates.yml
params/: abalone.yml  breast_cancer.yml
